Added a 64px tile option, updated level 1

--- a/phonegap/tileRunner2/platforms/ios/www/index.html
+++ b/phonegap/tileRunner2/platforms/ios/www/index.html
@@ -54,6 +54,8 @@
 		game.state.add('level', levelState);
 		game.state.add('town', townState);
 		
+        game.scale.scaleMode = Phaser.ScaleManager.RESIZE;
+        
 		window.addEventListener("resize", function () {
 			game.scale.setGameSize(window.innerWidth, window.innerHeight);
 		});
