Enemy updates and graphic updates

--- a/tilerunner/www/index.html
+++ b/tilerunner/www/index.html
@@ -43,6 +43,7 @@
 	<script type="text/javascript" src="js/ref/player.js"></script>
     <script type="text/javascript" src="js/ref/runnerLevel.js"></script>
     <script type="text/javascript" src="js/ref/hud.js"></script>
+    <script type="text/javascript" src="js/ref/grass.js"></script>
     
     <!-- STATE FILES -->
 	<script type="text/javascript" src="js/states/level1.js"></script>
